# apollo-healthcare-agent

./: .env.example  .gitignore  Dockerfile  README.md  apollo_architecture_details.md  docker-compose.yml  pyproject.toml
app/: __init__.py  auth.py  config.py  database.py  main.py  middleware.py  models.py
app/agent/: diagnosis_agent.py  drug_interaction_agent.py  eval_agent.py  graph.py  kg_loader.py  rag_agent.py  research_agent.py  runner.py  seed_patient.py  sqlite_cache.py  summarizer.py  tools.py
app/agent/diagnostics/: __init__.py  graph.py  nodes.py  prompts.py  state.py
app/agent/rag/: __init__.py  graph.py  nodes.py  prompts.py  state.py
app/frontend/: app.html  index.html
app/frontend/static/css/: app.css  clinical.css  home.css  reset.css  variables.css
app/frontend/static/js/: api.js  app.js  ask.js  chat.js  diagnostics.js  research.js  summary.js
app/ingestion/: chunker.py  embedder.py  parser.py  pipeline.py
app/ingestion/extractors/: __init__.py  pdf_extractor.py  transcript_extractor.py
app/rag/: qa.py  retriever.py  summariser.py
app/routers/: __init__.py  agent.py  documents.py  kg.py  patients.py  qa.py  rag.py  research.py  summarize.py
data/seed/: README.md  dummy_patient.json  james_hartwell_clinical_report.txt
medcontext/: Dockerfile
medcontext/app/: main.py
medcontext/app/frontend/: index.html
medcontext/app/frontend/static/js/: api.js  app.js  auth.js  demo-data.js  upload.js
medcontext/app/ingestion/extractors/: image_extractor.py  pdf_extractor.py  transcript_extractor.py
medcontext/data/seed/: dummy_patient.json  james_hartwell_handwritten_note_1.txt  james_hartwell_handwritten_note_2.txt  james_hartwell_labs.txt  james_hartwell_transcript.txt  james_hartwell_xray_report.txt
scripts/: seed_patient.py  test_extraction.py  test_summarizer.py  warm_cache.py
tests/: conftest.py  test_pipeline.py
