[project]
name = "medcontext"
version = "0.1.0"
requires-python = ">=3.11"
description = "Multi-agent clinical intelligence platform powered by RAG, knowledge graphs, and LLM orchestration."
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",

    # Data validation & config
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",

    # Database (encrypted SQLite)
    "sqlcipher3>=0.5.0",

    # Knowledge graph
    "neo4j>=5.0.0",

    # Vector store
    "qdrant-client>=1.9.0",

    # LLM clients — Groq (primary) + Gemini (fallback) + OpenRouter (third-string)
    "groq>=0.9.0",
    "google-generativeai>=0.7.0",
    "httpx>=0.27.0",

    # Structured output
    "instructor>=1.3.0",

    # Document parsing — Docling (multimodal RAG from notebook)
    "docling>=2.0.0",
    "PyMuPDF>=1.24.0",          # fitz — page preview rendering
    "Pillow>=10.0.0",            # image handling

    # Whisper audio transcription
    "openai-whisper>=20231117",

    # Retrieval
    "rank-bm25>=0.2.2",

    # Agent orchestration
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",

    # MCP tool wrapping
    "mcp>=1.0.0",
    "fastmcp>=0.4.0",

    # PubMed search
    "biopython>=1.83",

    # Web search
    "tavily-python>=0.3.0",

    # Observability & tracing
    "langfuse>=2.36.0",

    # Structured logging
    "structlog>=24.2.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",


    # Multimodal embeddings from notebook (Qwen3-VL)
    # Loaded at runtime via HuggingFace — not pip packages:
    # Qwen/Qwen3-VL-Embedding-2B
    # Qwen/Qwen3-VL-Reranker-2B
    # Qwen/Qwen3-VL-2B-Instruct
    # lightonai/LightOnOCR-2-1B
    "transformers>=5.0.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",

    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
