[project]
name = "medcontext"
version = "0.2.0"
requires-python = ">=3.11"
description = "Apollo — multi-agent clinical intelligence platform."

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    # LLM clients (Groq primary / Gemini fallback / OpenRouter third-string)
    "groq>=0.9.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    # Agent orchestration
    "langgraph>=0.1.0",
    "langchain-core>=0.2.0",
    # Knowledge graph (Neo4j; optional at runtime — falls back to local JSON)
    "neo4j>=5.0.0",
    # Document parsing (ingestion pipeline)
    "docling>=2.0.0",
    # Retrieval
    "rank-bm25>=0.2.2",
    # Vector store
    "qdrant-client>=1.9.0",
    # Structured output
    "instructor>=1.3.0",
    # Observability
    "langfuse>=2.36.0",
    "structlog>=24.2.0",
    # Web search
    "tavily-python>=0.5.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Numerics
    "numpy>=1.24.0",
    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "sentence-transformers>=2.7.0",
    "duckduckgo-search>=6.0",
]

# Heavy / system-level deps — install manually when needed:
#   sqlcipher3>=0.5.0       (encrypted SQLite; requires libsqlcipher native)
#   openai-whisper>=20231117 (audio transcription; requires ffmpeg)
#   transformers>=5.0.0      (HuggingFace models)
#   torch>=2.0.0             (GPU; large download)
#   mcp>=1.0.0 / fastmcp     (MCP tool wrapping)
#   biopython>=1.83          (PubMed search)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
